--- a/translations/dataFixtures.sk.po
+++ b/translations/dataFixtures.sk.po
@@ -823,6 +823,9 @@ msgstr ""
 msgid "Element arrangement"
 msgstr "Uspořádání prvků"
 
+msgid "Emailem"
+msgstr "Emailom"
+
 msgid "Energy efficiency class"
 msgstr "Třída energetické účinnosti"
 
