--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -31,8 +31,8 @@ msgstr ""
 msgid ", Shopsys s.r.o. Všechna práva vyhrazena."
 msgstr ", Shopsys s.r.o. All rights reserved."
 
-msgid ", Tropic Fishing s.r.o. Všechna práva vyhrazena."
-msgstr ""
+msgid ", Tropic Liberec s.r.o. Všechna práva vyhrazena."
+msgstr ", Tropic Liberec s.r.o. All rights reserved."
 
 msgid "- Výprodej"
 msgstr ""
