Added amount into internal stock availability texts. Changed availability for store stock.

--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -1126,6 +1126,9 @@ msgstr "Id stavu z IS"
 msgid "Identifikátor pro IS Pohoda"
 msgstr ""
 
+msgid "Ihned k odeslání, další dle dostupnosti"
+msgstr "[1,10] Ihned k odeslání %quantity%&nbsp;%unitName%, další dle&nbsp;dostupnosti|[11,Inf[ Ihned k odeslání > 10&nbsp;%unitName%, další dle&nbsp;dostupnosti"
+
 msgid "Image"
 msgstr "Obrázek"
 
@@ -3481,11 +3484,8 @@ msgstr "A je to. Vaše údaje byly úspěšně aktualizovány."
 msgid "Youtube"
 msgstr "Youtube"
 
-msgid "Za tuto cenu skladem > 10 %unitName%"
-msgstr "Za tuto cenu ihned k odeslání > 10 %unitName%"
-
 msgid "Za tuto cenu skladem již jen %quantity% %unitName%"
-msgstr "Za tuto cenu ihned k odeslání již jen %quantity%&nbsp;%unitName%"
+msgstr "[1,10] Za tuto cenu ihned k odeslání již jen %quantity%&nbsp;%unitName%|[11,Inf[ Za tuto cenu ihned k odeslání > 10&nbsp;%unitName%"
 
 msgid "Za zboží"
 msgstr "Za zboží"
