--- a/translations/messages.sk.po
+++ b/translations/messages.sk.po
@@ -1141,6 +1141,9 @@ msgstr "Id stavu z IS"
 msgid "Identifikátor pro IS Pohoda"
 msgstr "Identifikátor pre IS Pohoda"
 
+msgid "Ihned k odeslání, další dle dostupnosti"
+msgstr "[1,10] Ihneď k odoslaniu %quantity%&nbsp;%unitName%, ďalšie podľa&nbsp;dostupnosti|[11,Inf[ Ihneď k odoslaniu > 10&nbsp;%unitName%, ďalšie podľa&nbsp;dostupnosti"
+
 msgid "Image"
 msgstr "Obrázok"
 
@@ -3553,11 +3556,8 @@ msgstr "Vaše údaje boli úspešne aktualizované"
 msgid "Youtube"
 msgstr "Youtube"
 
-msgid "Za tuto cenu skladem > 10 %unitName%"
-msgstr "Za túto cenu ihneď k odoslaniu > 10 %unitName%"
-
 msgid "Za tuto cenu skladem již jen %quantity% %unitName%"
-msgstr "Za túto cenu ihneď k odoslaniu už len %quantity%&nbsp;%unitName%"
+msgstr "[1,10] Za túto cenu ihneď k odoslaniu už len %quantity%&nbsp;%unitName%|[11,Inf[ Za túto cenu ihneď k odoslaniu > 10&nbsp;%unitName%"
 
 msgid "Za zboží"
 msgstr "Za tovar"
